# python-projects

./: .gitignore  pyproject.toml
Password Genterator/: python-projects.code-workspace
dags/: dad_jokes_dag.py
day-projects/number-guessing-game/: guess_the_number.py
profitable-app-profiles/.ipynb_checkpoints/: Profitable App Profiles for ios and droid-checkpoint.ipynb
week-projects/dad_jokes/: .env.example  dad_jokes.py
week-projects/profitable-app-profiles/: AppleStore.csv  Profitable App Profiles for ios and droid.ipynb
