[tool.poetry]
name = "python-projects"
version = "0.1.0"
description = "Python projects: day projects and week projects"
authors = ["Austin Fielding"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
